--- a/index.html
+++ b/index.html
@@ -53,7 +53,36 @@
 			</nav>
 		</header>
 
-		<main> <!-- Cuerpo principal del sitio -->
+        <main> <!-- Cuerpo principal del sitio -->
+            
+          <input type="radio" id="1" name="image-slide" hidden/>
+          <input type="radio" id="2" name="image-slide" hidden/>
+          <input type="radio" id="3" name="image-slide" hidden/>
+
+          <div class='slide'>
+              <div class='item-slide'>
+                  <img src="img/supermercado.jpg">
+              </div>
+              <div class='item-slide'>
+                  <img src="img/supermercado1.jpg">
+              </div>
+              <div class='item-slide'>
+                   <img src="img/supermercado2.jpg">
+              </div>
+          </div>
+          <div class="pagination">
+               <label class="pagination-item" for="1">
+                    <img src="img/supermercado.jpg">
+               </label>
+               <label class="pagination-item" for="1">
+                    <img src="img/supermercado1.jpg">
+               </label>
+               <label class="pagination-item" for="1">
+                    <img src="img/supermercado2.jpg">
+               </label>
+          </div>
+
+
 			<section > <!-- Contenedor de todos los productos -->
 				<article> <!-- Contenedor de cada producto -->
 					<img class="main-photo" src="img/img-phone-01.jpg" alt="">
