Menu Header Alineado - Sprint 2 - LAH

--- a/index.html
+++ b/index.html
@@ -41,15 +41,13 @@
 
             <form action="" method="GET">
             <input type="search" name="buscador" placeholder="Ingrese su búsqueda">
-            </form> 
+            </form>
 			<nav>
-				<ul>
-                    <li>Comprar</li>
-                    <li>Vender</li>
-                    <li>Mapa</li>
-                    <li>Favoritos</li>
-                    <li>Login</li>
-                </ul>
+                    <a class="menu" href="">Comprar</a>
+                    <a class="menu" href="">Vender</a>
+                    <a class="menu" href="">Mapa</a>
+                    <a class="menu" href="">Favoritos</a>
+                    <a class="menu" href="">Login</a>
 			</nav>
 		</header>   <!-- ENCABEZADO -->
 
