--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
 		</header>   <!-- ENCABEZADO -->
 
         <main> <!-- Cuerpo principal del sitio -->
+           <!-- ACA EMPIEZA EL CODIGO DE LOS SLIDES -->
             <div class="body">
-            <div class="container-all"> <!-- ACA EMPIEZA EL CODIGO DE LOS SLIDES -->
+            <div class="container-all"> 
 
                 <input type="radio" id="1" name="image-slide" hidden/>
                 <input type="radio" id="2" name="image-slide" hidden/>
